# game-of-life

./: CMakeLists.txt  README.md  a.out  board.cpp  board.h  cell.cpp  cell.h  direction.h  main  main.cpp
